# HiCoM

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
config/: dynerf.yaml  meetroom.yaml
pipeline/hicom/: __init__.py  data.py  module.py  trainer.py
pipeline/hicom/model/: deformation.py  gaussian.py
